<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
        <EditTextPreference
            android:defaultValue="false"
            android:key="display_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_display_name" />

    </PreferenceCategory>
    <EditTextPreference android:title="@string/pref_title_email_address" />
    <!--todo:need to add entryValues string array??-->
    <ListPreference
        android:defaultValue="false"
        android:entries="@array/pref_entries_favorite_social"
        android:key="user_favorite_social"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_favorite_social_network" />

</PreferenceScreen>